Example/AwesomeMvcDemo/AwesomeMvcDemo/Views/Error/errorp.ascx
<%@ Control Language="C#" Inherits="System.Web.Mvc.ViewUserControl<object>" %>
    <h1>Oops! Something Bad Happened!</h1>
    <%:ViewData["Message"] %>